<resources>
    <string name="app_name">TravelTeam</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login_travel_team">Sign in Travel Team App</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to route creation -->
    <string name="create_route_button">Create</string>
    <string name="prompt_initial_place">Initial Place</string>
    <string name="prompt_final_place">Final Place</string>

    <!-- Strings related to join a route -->
    <string name="join_route_button">Join</string>
    <string name="prompt_route_id">Route id</string>

</resources>
